[metadata]
name = energy-net-MARL
version = 0.0.0
author = Sarah Keren
author_email = sarahk@technion.ac.il
description = A package for testing MARL in smart-grids.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLAIR-LAB-TECHNION/EnergyNetMARL
keywords = AI, MARL, multi-agent, smart-grids
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'

[options]
packages = find:
python_requires = >=3.8
install_requires =
    stable_baselines3
