[metadata]
name = energy-net-MARL
version = 0.0.0
author = Sarah Keren
author_email = sarahk@technion.ac.il
description = A package for testing MARL in smart-grids.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLAIR-LAB-TECHNION/EnergyNetMARL
keywords = AI, MARL, multi-agent, smart-grids
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'

[options]
packages = find:
python_requires = >=3.8
install_requires =
    citylearn==1.8.0
    ipywidgets==8.1.1
    matplotlib==3.8.0
    seaborn==0.12.2
    stable_baselines3
    shimmy>=0.2.1
